[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
split-debuginfo = "unpacked"

[workspace]
members = [".", "migration", "entity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["multipart"] }
clap = { version = "3", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.2", features = [
    "cors",
    "trace",
    "compression-br",
    "auth",
] }
bytes = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
jsonwebtoken = "8"
entity = { path = "entity" }
migration = { path = "migration" }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }

[[bin]]
name = "server"
doc = false

[[bin]]
name = "show_users"
doc = false
